# Saas-platform

./: .editorconfig  .env.example  .gitignore  README.md  alembic.ini  package-lock.json  package.json  pytest.ini  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/admin/: package.json  tailwind.config.ts
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: admin.py  auth.py  billing.py  catalog.py  health.py  portal.py  product_client.py  services.py  support.py
apps/api/app/billing/providers/: __init__.py  base.py  cashfree.py  razorpay.py
apps/api/app/core/: config.py  database.py  dependencies.py  security.py
apps/api/app/models/: __init__.py  base.py  catalog.py  commerce.py  developer.py  enums.py  identity.py  licensing.py  platform.py  support.py
apps/api/app/repositories/: catalog.py
apps/api/app/schemas/: admin_catalog.py  auth.py  catalog.py  commerce.py  portal.py  product_client.py  support.py
apps/api/app/services/: auth.py  billing.py  dashboard.py  product_distribution.py
apps/api/tests/: test_billing.py  test_product_distribution.py  test_security.py
apps/docs/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/gateway/: pyproject.toml
apps/portal/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tailwind.config.ts
database/migrations/: env.py
database/seeds/: seed_demo.py
docs-internal/: architecture.md  phases.md  roadmap.md
infrastructure/docker/: Dockerfile.api  Dockerfile.gateway  docker-compose.yml
(+74 files in other folders)
